--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,5 +3,5 @@ appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = %m%n
 
-rootLogger.level = info
+rootLogger.level = debug
 rootLogger.appenderRef.stdout.ref = STDOUT
