--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <jetty.version>9.3.12.v20160915</jetty.version>
         <jersey.version>2.7</jersey.version>
         <log4j.version>2.6.2</log4j.version>
+        <gson.version>2.7</gson.version>
     </properties>
 
     <dependencies>
@@ -93,6 +94,12 @@
             <groupId>org.glassfish.jersey.media</groupId>
             <artifactId>jersey-media-moxy</artifactId>
             <version>${jersey.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
