--- a/pom.xml
+++ b/pom.xml
@@ -101,5 +101,10 @@
             <version>${gson.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 </project>
