--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+                <version>2.3.2</version>
             </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
